--- a/DockerFile/proyectoJardineria/phpmyAdmin/Dockerfile
+++ b/DockerFile/proyectoJardineria/phpmyAdmin/Dockerfile
@@ -4,7 +4,8 @@ RUN apt update && apt install -yq --no-install-recommends \
     openssh-client \
     sudo \
     apache2 \
-    mysql-client
+    mysql-client \
+    git
    # phpmyadmin 
 
 EXPOSE 80
@@ -20,5 +21,12 @@ RUN chmod +x /root/phpmyadmin.exp
 
 RUN dos2unix /root/start.sh 
 RUN chmod +x /root/start.sh
+
+#---------- instalamos composer --------------------
+WORKDIR /var/www/html
+RUN curl -sS https://getcomposer.org/installer | php
+RUN mv composer.phar /usr/local/bin/composer
+RUN chmod +x /usr/local/bin/composer
+
 ENTRYPOINT [ "/root/start.sh" ]
 
