--- a/DockerFile/proyectoJardineria/phpmyAdmin/Dockerfile
+++ b/DockerFile/proyectoJardineria/phpmyAdmin/Dockerfile
@@ -8,7 +8,7 @@ RUN apt update && apt install -yq --no-install-recommends \
     git
    # phpmyadmin 
 
-EXPOSE 80
+#EXPOSE 80
 EXPOSE 22
 
 COPY ./addhosts /root
