Roles-When-Icludes-26/02/2021

--- a/Ansible/proyectos/web/roles/apache2/tasks/main.yml
+++ b/Ansible/proyectos/web/roles/apache2/tasks/main.yml
@@ -1,11 +1,9 @@
-- name: Instalar apache2
-  apt: name=apache2 state=latest
-- name: Iniciar y habilitar el servicio
-  service: name=apache2 state=started enabled=true
-- name: Copiar fichero de configuracion
-  copy: src=apache2.conf dest=/etc/apache2/apache2.conf
-  notify: restart_httpd
+- name: Instalar apache2 en Debian-Ubuntu
+  include: instApache2.yml
+  when: ansible_distribution == "Debian" o ansible_distribution == "Ubuntu"
+- name: Instalar httpd en CentOS
+  include: instHttpd.yml
+  when: ansible_distribution == "CentOS"
 
 - name: Copiar index.html
   template: src=index.html.j2 dest=/var/www/html/index.html
-
