--- a/Ansible/proyectos/web/roles/apache2/tasks/main.yml
+++ b/Ansible/proyectos/web/roles/apache2/tasks/main.yml
@@ -1,9 +1,9 @@
-- name: Instalar apache2 en Debian-Ubuntu
-  include: instApache2.yml
-  when: ansible_distribution == "Debian" o ansible_distribution == "Ubuntu"
-- name: Instalar httpd en CentOS
-  include: instHttpd.yml
-  when: ansible_distribution == "CentOS"
+#- include_tasks: instalar.yml
+#  loop: "{{ listaPaquetes }}"
 
-- name: Copiar index.html
-  template: src=index.html.j2 dest=/var/www/html/index.html
+#- include_tasks: setupComposer.yml
+
+#- include_tasks: setupGit.yml
+#  loop: "{{ listaProyectos }}"
+
+- include_tasks: setupLaravel.yml
