--- a/Docker/dockerfiles/ubuntu/apachePhp/Dockerfile
+++ b/Docker/dockerfiles/ubuntu/apachePhp/Dockerfile
@@ -5,6 +5,11 @@ RUN apt update && apt install -yq --no-install-recommends \
 ARG TZ=Europe/Madrid
 ENV TZ=${TZ}
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
+COPY ./start-php.sh /root
+RUN chmod +x /root/start-php.sh
+RUN dos2unix /root/start-php.sh 
+
 #instalamos php
 #RUN add-apt-repository ppa:ondrej/php 
 RUN apt-get update && apt-get install -y php \
@@ -21,4 +26,5 @@ RUN apt-get update && apt-get install -y php \
     php-pear \ 
     php-bcmath \
     apache2 
- 
+
+ENTRYPOINT [ "/root/start-php.sh" ]
