--- a/Docker/dockerfiles/ubuntu/base/Dockerfile
+++ b/Docker/dockerfiles/ubuntu/base/Dockerfile
@@ -1,8 +1,14 @@
 FROM ubuntu
 #indicamos el timezone
+ARG USUARIO
+ARG PASSWD
 ARG TZ=Europe/Madrid
 ENV TZ=${TZ}
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
+COPY ./start.sh /root
+COPY ./id_rsa.pub /root
+RUN chmod +x /root/start.sh
 
 RUN apt update && apt install -yq --no-install-recommends \
     apt-utils \
@@ -21,3 +27,5 @@ RUN apt update && apt install -yq --no-install-recommends \
     expect \
     python3
 
+RUN dos2unix /root/start.sh 
+ENTRYPOINT [ "/root/start.sh" ]
