--- a/Docker/DockerCompose/oneContainer/ubuntuBase/docker-compose.yml
+++ b/Docker/DockerCompose/oneContainer/ubuntuBase/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: servidorbase
     image: ubuntuBase
     build: 
-      context: ./servidores
+      context: ../../dockerfiles/ubuntu/base
       dockerfile: ./Dockerfile
     environment: 
       - USUARIO=morgado
