--- a/Docker/DockerCompose/oneContainer/ubuntuBase/docker-compose.yml
+++ b/Docker/DockerCompose/oneContainer/ubuntuBase/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
   base:
     container_name: servidorbase
-    image: ubuntuBase
+    image: ubuntu-base
     build: 
       context: ./../../../dockerfiles/ubuntu/base
       dockerfile: ./Dockerfile
