--- a/Docker/DockerCompose/oneContainer/ubuntubase.yml
+++ b/Docker/DockerCompose/oneContainer/ubuntubase.yml
@@ -4,7 +4,7 @@ services:
     container_name: servidorbase
     image: ubuntubase
     build: 
-      context: ./../../../dockerfiles/ubuntu/base
+      context: ./../../dockerfiles/ubuntu/base
       dockerfile: ./Dockerfile
     environment: 
       - USUARIO=morgado
