--- a/Docker/dockerfiles/ubuntu/base/docker-compose.yml
+++ b/Docker/dockerfiles/ubuntu/base/docker-compose.yml
@@ -1,21 +1,21 @@
 version: "3.8"
 services:
   base:
-    container_name: servidorweb
-    image: ubbase-apachephp
+    container_name: servidorbase
+    image: ubuntubase
     build: 
-      context: ./../../dockerfiles/ubuntu/apachePhp
+      context: .
       dockerfile: ./Dockerfile
     environment: 
       - USUARIO=morgado
       - PASSWD=1234
     networks: 
-      netapache:
-          ipv4_address: 172.130.10.2
+      netansible:
+          ipv4_address: 172.120.10.2
 networks: 
-  netapache:
+  netansible:
       ipam: 
           driver: default
           config: 
-              - subnet: 172.130.10.0/24 
+              - subnet: 172.120.10.0/24 
  
