--- a/Docker/dockerfiles/ubuntu/apachePhp/docker-compose.yml
+++ b/Docker/dockerfiles/ubuntu/apachePhp/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     environment: 
       - USUARIO=morgado
       - PASSWD=1234
+      - PUERTO=81
     networks: 
       netapache:
           ipv4_address: 172.130.10.2
