--- a/Docker/dockerfiles/ubuntu/apachePhp/docker-compose.yml
+++ b/Docker/dockerfiles/ubuntu/apachePhp/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
   base:
     container_name: servidorweb
-    image: ubbase-apachephp
+    image: ub-base-apache
     build: 
       context: .
       dockerfile: ./Dockerfile
