--- a/Docker/dockerfiles/ubuntu/base/docker-compose.yml
+++ b/Docker/dockerfiles/ubuntu/base/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
   base:
     container_name: servidorbase
-    image: ubuntubase
+    image: ub-base
     build: 
       context: .
       dockerfile: ./Dockerfile
