--- a/Docker/DockerCompose/singleContainer/proxymanager.yml
+++ b/Docker/DockerCompose/singleContainer/proxymanager.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
   app:
+    container_name: proxymanager
     image: 'jc21/nginx-proxy-manager:latest'
     restart: unless-stopped
     ports:
