--- a/Docker/DockerCompose/multipleContainer/proxymanager/proxymanager.yml
+++ b/Docker/DockerCompose/multipleContainer/proxymanager/proxymanager.yml
@@ -3,7 +3,8 @@ version: '3'
 services:
 
   app:
-    image: 'jc21/nginx-proxy-manager:latest'
+    image: jc21/nginx-proxy-manager:latest
+    restart: unless-stopped
     ports:
       - '80:80'
       - '81:81'
@@ -17,9 +18,12 @@ services:
     volumes:
       - pxmanager:/data
       - ./letsencrypt:/etc/letsencrypt
+    depends_on:
+      - db
       
   db:
-    image: 'jc21/mariadb-aria:10.4'
+    image: jc21/mariadb-aria
+    restart: unless-stopped
     environment:
       MYSQL_ROOT_PASSWORD: 'npm'
       MYSQL_DATABASE: 'npm'
