--- a/Docker/DockerCompose/multipleContainer/proxymanager/proxymanager.yml
+++ b/Docker/DockerCompose/multipleContainer/proxymanager/proxymanager.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
 
   app:
+    container_name: proxymanager
     image: jc21/nginx-proxy-manager:latest
     restart: unless-stopped
     ports:
@@ -22,6 +23,7 @@ services:
       - db
       
   db:
+    container_name: dbproxymanager
     image: jc21/mariadb-aria
     restart: unless-stopped
     environment:
