--- a/Docker/DockerCompose/singleContainer/portainer/portainer.yml
+++ b/Docker/DockerCompose/singleContainer/portainer/portainer.yml
@@ -1,22 +1,15 @@
 version: '3.2'
 
 services:
-
   portainer:
     image: portainer/portainer-ce
     restart: always
     ports:
       - "9000:9000"
-      - "8000:8000"
     command: -H unix:///var/run/docker.sock
     volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
       - portainer_data:/data
-    networks:
-      - agent_network
 
-networks:
-  agent_network:
-    driver: overlay
-    attachable: true
 volumes:
   portainer_data:
