--- a/proyectos/proyectoAnsible/docker-compose.yml
+++ b/proyectos/proyectoAnsible/docker-compose.yml
@@ -1,53 +1,19 @@
-version: '3.8'
 services:
   s1:
-    container_name: servidor1
+    container_name: servidorbase
+    image: ub-base
     build: 
-      context: ./servidores
+      context: ${DIR_DFILES}/ubuntu/base
       dockerfile: ./Dockerfile
-    environment: 
-      - USUARIO=luis
-      - PASSWD=1234
+    env_file: 
+      - ./environment.yml
     networks: 
       netansible:
-          ipv4_address: 172.130.10.2
-  s2:
-    container_name: servidor2
-    build: 
-      context: ./servidores
-      dockerfile: ./Dockerfile
-    environment: 
-      - USUARIO=luis
-      - PASSWD=1234
-    networks: 
-      netansible:
-          ipv4_address: 172.130.10.3
-  # s3:
-  #   container_name: servidor3
-  #   build: 
-  #     context: ./servidores
-  #     dockerfile: ./Dockerfile
-  #   environment: 
-  #     - USUARIO=luis
-  #     - PASSWD=1234
-  #   networks: 
-  #     netansible:
-  #         ipv4_address: 172.130.10.4
-  # s4:
-  #   container_name: servidor4
-  #   build: 
-  #     context: ./servidores
-  #     dockerfile: ./Dockerfile
-  #   environment: 
-  #     - USUARIO=luis
-  #     - PASSWD=1234
-  #   networks: 
-  #     netansible:
-  #         ipv4_address: 172.130.10.5
+          ipv4_address: 172.120.10.2
 networks: 
   netansible:
       ipam: 
           driver: default
           config: 
-              - subnet: 172.130.10.0/24
-
+              - subnet: 172.120.10.0/24 
+ 
