container stripe.yml

--- a/Docker/DockerCompose/multipleContainer/stripe-mongodb/stripe.yml
+++ b/Docker/DockerCompose/multipleContainer/stripe-mongodb/stripe.yml
@@ -1,31 +1,45 @@
-version: '3'
+version: "3"
 
 services:
-  strapi:
-    container_name: strapi
+  strapiexample:
     image: strapi/strapi
+    container_name: strapiexample
+    restart: unless-stopped
+    env_file: .env
     environment:
-      - DATABASE_CLIENT=mongo
-      - DATABASE_HOST=db
-      - DATABASE_PORT=27017
-      - DATABASE_NAME=ElInvencible
-      - DATABASE_USERNAME=
-      - DATABASE_PASSWORD=
-      - AUTHENTICATION_DATABASE=strapi
-    ports:
-      - 1337:1337
+      DATABASE_CLIENT: ${DATABASE_CLIENT}
+      DATABASE_NAME: ${DATABASE_NAME}
+      DATABASE_HOST: ${DATABASE_HOST}
+      DATABASE_PORT: ${DATABASE_PORT}
+      DATABASE_USERNAME: ${DATABASE_USERNAME}
+      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
+    #    links:
+    #      - mongo:mongo
+    networks:
+      - strapi-app-network
     volumes:
       - ./app:/srv/app
-  #   depends_on:
-  #     - db
+    ports:
+      - "1337:1337"
 
-  # db:
-  #   container_name: mongo
-  #   image: mongo
-  #   environment:
-  #     - MONGO_INITDB_DATABASE=strapi
-  #   ports:
-  #     - 27017:27017
-  #   volumes:
-  #     - ./db:/data/db
-  #   restart: always
+  mongoexample:
+    image: mongo
+    container_name: mongoexample
+    restart: unless-stopped
+    env_file: .env
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+    networks:
+      - strapi-app-network
+    volumes:
+      - strapidata:/data/db
+    ports:
+      - "27017:27017"
+
+networks:
+  strapi-app-network:
+    driver: bridge
+
+volumes:
+  strapidata:
