container stripe.yml

--- a/Docker/DockerCompose/multipleContainer/stripe-mongodb/.env
+++ b/Docker/DockerCompose/multipleContainer/stripe-mongodb/.env
@@ -1,5 +1,5 @@
 DATABASE_CLIENT=mongo
-DATABASE_NAME=strapi
+DATABASE_NAME=elInvencible
 DATABASE_HOST=mongoInvencible
 DATABASE_PORT=27017
 DATABASE_USERNAME=invencible
