--- a/Docker/DockerCompose/multipleContainer/stripe-mongodb/stripe.yml
+++ b/Docker/DockerCompose/multipleContainer/stripe-mongodb/stripe.yml
@@ -1,7 +1,7 @@
 version: "3"
 
 services:
-  strapiexample:
+  strapiInvencible:
     image: strapi/strapi
     container_name: strapiInvencible
     restart: unless-stopped
@@ -22,7 +22,7 @@ services:
     ports:
       - "1337:1337"
 
-  mongoexample:
+  mongoInvencible:
     image: mongo
     container_name: mongoInvencible
     restart: unless-stopped
