--- a/Docker/DockerCompose/multipleContainer/stripe-mongodb/.env
+++ b/Docker/DockerCompose/multipleContainer/stripe-mongodb/.env
@@ -1,8 +1,8 @@
 DATABASE_CLIENT=mongo
-DATABASE_NAME=elInvencible
-DATABASE_HOST=mongoinvencible
+DATABASE_NAME=strapi
+DATABASE_HOST=mongoexample
 DATABASE_PORT=27017
-DATABASE_USERNAME=invencible
-DATABASE_PASSWORD=invencible
+DATABASE_USERNAME=strapi
+DATABASE_PASSWORD=password
 MONGO_INITDB_ROOT_USERNAME=strapi
-MONGO_INITDB_ROOT_PASSWORD=strapi
+MONGO_INITDB_ROOT_PASSWORD=password
