--- a/Docker/DockerCompose/multipleContainer/stripe-mongodb/stripe.yml
+++ b/Docker/DockerCompose/multipleContainer/stripe-mongodb/stripe.yml
@@ -3,7 +3,7 @@ services:
   strapiexample:
     image: strapi/strapi
     container_name: strapiexample
-    restart: unless-stopped
+    #restart: unless-stopped
     env_file: .env
     environment:
       DATABASE_CLIENT: ${DATABASE_CLIENT}
@@ -24,7 +24,7 @@ services:
   mongoexample:
     image: mongo
     container_name: mongoexample
-    restart: unless-stopped
+   # restart: unless-stopped
     env_file: .env
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
