container stripe.yml

--- a/Docker/DockerCompose/singleContainer/mongodb/mongoDB.yml
+++ b/Docker/DockerCompose/singleContainer/mongodb/mongoDB.yml
@@ -1,6 +1,7 @@
 version: '3.7'
 services:
   mongodb_contenedor:
+    container_name: mongoLibreria
     image: mongo
     environment:
       - MONGO_INITDB_DATABASE=Libreria
