container stripe.yml

--- a/proyectos/deClase/node/NodeMongoLibreria/mongoDB.yml
+++ b/proyectos/deClase/node/NodeMongoLibreria/mongoDB.yml
@@ -3,6 +3,7 @@ services:
   mongodb_contenedor:
     container_name: mongoLibreria
     image: mongo
+    restart: always
     env_file: environment.yml
     environment:
       DATABASE_NAME: ${DATABASE_NAME}
